<resources>
    <string name="app_name">RabahMe</string>
    <string name="register">ENREGISTRER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Mot de passe</string>
    <string name="login_password_reset">Entrer le code OTP</string>
    <string name="signup_login_hint">Vous avez déjà un compte ? CONNECTER</string>
    <string name="login_signup_hint">Vous n\'avez pas de compte ? ENREGISTRER</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_Campagne">Campagne</string>
    <string name="title_Suivie">Suivie</string>
    <string name="title_menus">Menus</string>
    <string name="title_setting">Paramètres</string>
    <string name="title_activity_menu">menu</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
</resources>