<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/linearParent"
        android:layout_width="334dp"
        android:layout_height="413dp"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="CONNECTER" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/ForgetPass"
            style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:onClick="viewForgotPassword"
            android:text="Mot de passe oublié?"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize" />

        <Button
            android:id="@+id/creation"
            style="@style/loginButton"
            android:layout_width="162dp"
            android:layout_height="39dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Login" />

        <TextView
            android:id="@+id/RegisterText"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="viewRegisterClicked"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
